--- a/balena.yml
+++ b/balena.yml
@@ -9,17 +9,17 @@ assets:
   repository:
     type: blob.asset
     data:
-      url: "https://github.com/mpous/hivemq-block-balena"
+      url: "https://github.com/mpous/hivemq4-block"
   logo:
     type: blob.asset
     data:
-      url: 'https://raw.githubusercontent.com/mpous/hivemq-block-balena/master/logo.png'
+      url: 'https://raw.githubusercontent.com/mpous/hivemq4-block/master/logo.png'
 data:
   applicationEnvironmentVariables:
     - HIVEMQ_AUTHENTICATION_ENABLED: false
-    - HIVEMQ_AUTHENTICATION_CONFIGURATION: <authentication><mqtt-simple-authentication><username>your-username</username><password>your-password</password></mqtt-simple-authentication></authentication>
+    - HIVEMQ_AUTHENTICATION_CONFIGURATION: "<authentication><mqtt-simple-authentication><username>your-username</username><password>your-password</password></mqtt-simple-authentication></authentication>"
     - HIVEMQ_CONNECTION_ENABLED: false
-    - HIVEMQ_CONNECTION_CONFIGURATION: <connection><static><host>your-cloud-connection-host</host><port>your-port</port></static></connection> #<<tls><enabled>true</enabled><cipher-suites><cipher-suite>TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384</cipher-suite><cipher-suite>TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256</cipher-suite><cipher-suite>TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256</cipher-suite><cipher-suite>TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384</cipher-suite><cipher-suite>TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA</cipher-suite><cipher-suite>TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA</cipher-suite><cipher-suite>TLS_RSA_WITH_AES_128_GCM_SHA256</cipher-suite><cipher-suite>TLS_RSA_WITH_AES_128_CBC_SHA</cipher-suite><cipher-suite>TLS_RSA_WITH_AES_256_CBC_SHA</cipher-suite></cipher-suites><protocols><protocol>TLSv1.2</protocol></protocols></tls>
+    - HIVEMQ_CONNECTION_CONFIGURATION: "<connection><static><host>your-cloud-connection-host</host><port>your-port</port></static></connection> #<<tls><enabled>true</enabled><cipher-suites><cipher-suite>TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384</cipher-suite><cipher-suite>TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256</cipher-suite><cipher-suite>TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256</cipher-suite><cipher-suite>TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384</cipher-suite><cipher-suite>TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA</cipher-suite><cipher-suite>TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA</cipher-suite><cipher-suite>TLS_RSA_WITH_AES_128_GCM_SHA256</cipher-suite><cipher-suite>TLS_RSA_WITH_AES_128_CBC_SHA</cipher-suite><cipher-suite>TLS_RSA_WITH_AES_256_CBC_SHA</cipher-suite></cipher-suites><protocols><protocol>TLSv1.2</protocol></protocols></tls>"
   defaultDeviceType: genericx86-64-ext
   supportedDeviceTypes:
     - genericx86-64-ext
